--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,11 @@
   font-family: "Squada One", cursive;
   color: #5786c7;
 }
+
+/* ======== NEW PRODUCT FORM ========= */
+
+.prod-form {
+  padding: 3%;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
+    rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+}
