add carousel and jumbotron to homepage

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Squada+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Carter+One&family=Squada+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Squada+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Squada+One&display=swap');
 
 /* .body {
     background-color: #5786c7;
@@ -7,76 +7,77 @@
 } */
 /* ======== GENERAL STYLES ========= */
 .box-shadow {
-    padding: 3%;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
-        rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+  padding: 3%;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
+    rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 
 .blue-title {
-    font-family: "Squada One", cursive;
-    color: #5786c7;
+  font-family: 'Squada One', cursive;
+  color: #5786c7;
 }
 
 .red-title {
-    font-family: "Squada One", cursive;
-    color: #d44349;
+  font-family: 'Squada One', cursive;
+  color: #d44349;
 }
 
 /* ======== HEADER ========= */
 
 .header {
-    min-height: 10vh;
+  min-height: 10vh;
 }
 
 .container {
-    background-color: white;
-    width: 90%;
+  background-color: white;
+  width: 90%;
 }
 
 .logo {
-    height: 100px;
-    width: 100px;
+  height: 100px;
+  width: 100px;
 }
-
 /* ======== HOME PAGE ========= */
 
+.jumbotron {
+  width: 100vw;
+  opacity: 0.8;
+  position: relative;
+}
+
+/* ======== ADMIN PAGE ========= */
+
 .thead {
-    background-color: #5786c7;
-    color: white;
+  background-color: #5786c7;
+  color: white;
 }
 
 /* ======== PRODUCT DETAILS ========= */
 
 .product-details {
-    padding: 5%;
-    padding-left: 2%;
-    border-radius: 1%;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
-        rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+  padding: 5%;
+  padding-left: 2%;
+  border-radius: 1%;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
+    rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 
 /* ======== FOOTER PAGE ========= */
 
-/* .page-container {
-    display: flex;
-    flex-direction: column;
-    max-height: 100vh;
-} */
-
 .red-footer-title {
-    font-family: "Squada One", cursive;
-    color: #d44349;
+  font-family: 'Squada One', cursive;
+  color: #d44349;
 }
 
 .list-style {
-    list-style-type: none;
-    padding-left: 0%;
+  list-style-type: none;
+  padding-left: 0%;
 }
 
 .main-footer {
-    background-color: #f8f9fa;
-    color: #5786c7;
-    /* padding-top: 2em; */
-    /* position: relative; */
-    /* width: auto; */
+  background-color: #f8f9fa;
+  color: #5786c7;
+  /* padding-top: 2em; */
+  /* position: relative; */
+  /* width: auto; */
 }
