--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Squada+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Squada+One&display=swap');
 
-/* .body {
-    background-color: #5786c7;
-    height: 100vh;
-} */
 /* ======== GENERAL STYLES ========= */
 .box-shadow {
   padding: 3%;
@@ -17,9 +13,25 @@
   color: #5786c7;
 }
 
+.blue-title-lg {
+  font-family: 'Squada One', cursive;
+  color: #5786c7;
+  font-size: 1.3em;
+}
+
 .red-title {
   font-family: 'Squada One', cursive;
   color: #d44349;
+}
+
+.red-title-brand {
+  font-family: 'Squada One', cursive;
+  color: #d44349;
+  font-size: 1.6em;
+}
+
+NavLink {
+  font-size: larger;
 }
 
 /* ======== HEADER ========= */
@@ -29,7 +41,7 @@
 }
 
 .container {
-  background-color: white;
+  /* background-color: white; */
   width: 90%;
 }
 
